# pycwr

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  CONTRIBUTORS_CN.txt  LICENSE.txt  MANIFEST.in  README.md  README_CN.md  meta.yaml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-core.txt  requirements-dev.txt  requirements-full.txt  requirements.txt  setup.py
GUI/: Ui_WeatherRadar.py  WeatherRadar.py  WeatherRadar.ui  WeatherRadar_ui.py  mplwidget.py  radar_icon.qrc  radar_icon_rc.py
NuistRadar/: SetupRadar.py  __init__.py  cfgs.py  setup.py
configure/: default_config.py  location_config.py  pyart_config.py  pyart_default_config.py
data/: radar_info.json
docs/: api_reference.md  api_reference_cn.md  index.md  radar_network_quickstart.md  radar_network_quickstart_en.md  robustness.md
examples/: GUI_test.py  test.py
notebooks/: NuistRadar_example.ipynb  SA格式雷达数据读取以及测试pyart可用性(1).ipynb  SA格式雷达数据读取绘图.ipynb  pycwr_cappi.ipynb  pycwr_example.ipynb  pycwr_plot.ipynb  pycwr_read.ipynb
pycwr/: __init__.py
scripts/: LaunchGUI.py  ci_import_smoke.py  push_github.sh  radar_windows.bat  transform2cfradial.py
test/: README.md  WriteWSR98D.py  plot_0707.py  plot_draw_compare.py  plot_product_0627.py  plot_test.py  test.py  test_0627.py  test_examples_hid.py  test_examples_interp.py  test_examples_public_api.py  test_examples_qc.py  test_examples_sections.py  test_examples_wind.py  test_examples_xband.py  test_netcdf.py  test_radial_export.py  test_read.py  test_regression_compatibility.py  test_regression_geometry.py  test_regression_grid.py  (+4 more)
(+125 files in other folders)
